fixing vertical align menu

--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,8 @@ html, body {
 
 header {
 	background-color: #F14242;
-	padding: 1.5em;
 	font-family: 'Indie Flower', Arial, sans-serif;
 	font-size: 1.5em;
-	text-align: right;
 	height: 15%;
 }
 
@@ -25,16 +23,15 @@ main {
 footer {
 	background-color: #3B546C;
 	text-align: right;
-	vertical-align: middle;
 	height: 5%;
 }
 
 .menu {
-	display: inline-block;
-	width: 100%;
+	height: 100%;
 }
 
 .menu ul {
+	height: 100%;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -107,6 +104,11 @@ footer {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
+}
+
+.social li a:hover{
+	opacity: 0.8;
+	filter: alpha(opacity=80);
 }
 
 .facebook a{
